src/objects/fc_csc__AR_Functions_Config__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>[Frontera] AR Functions configuration</description>
    <fields>
        <fullName>fc_csc__API_Access_Key_Id__c</fullName>
        <label>API Access Key Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__API_Access_Secret_Key__c</fullName>
        <label>API Access Secret Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__Allow_Creation_of_Payment_Method__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Creation of Payment Method</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fc_csc__Allow_Write_Offs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Write-Offs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fc_csc__Hosted_Page_Id__c</fullName>
        <description>Page id set up in Zuora for HPM page</description>
        <inlineHelpText>Page id set up in Zuora for HPM page</inlineHelpText>
        <label>Hosted Page Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__Hosted_Page_Url__c</fullName>
        <label>Hosted Page Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fc_csc__IIA_Amount_Limit__c</fullName>
        <label>IIA Amount Limit</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fc_csc__IIA_Reason_Code__c</fullName>
        <label>IIA Reason Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__Payment_Gateway__c</fullName>
        <label>Payment Gateway</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__Refund_Reason_Code__c</fullName>
        <description>Used when creating a refund when splitting a payment</description>
        <label>Refund Reason Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__Split_Payment_Field_Set__c</fullName>
        <description>API name of the field set</description>
        <inlineHelpText>API name of the field set</inlineHelpText>
        <label>Split Payment Field Set</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>AR Functions Config</label>
</CustomObject>